hphp/test/zend/good/ext/standard/tests/strings/htmlentities07.php.skipif
<?php
<<__EntryPoint>> function main() {
extension_loaded("mbstring") or die("skip mbstring not available\n");
}
