hphp/test/zend/bad/ext/mbstring/tests/mb_http_input.php.skipif
<?php
extension_loaded('mbstring') or die('skip mbstring not available');
(php_sapi_name()=='cgi') or die("skip sapi is not a cgi version");
die("skip disabled temporarily");
?>